import 'package:flutter/material.dart';
import '../../../core/constants/app_constants.dart';
import '../../../core/utils/gps_utils.dart';

enum CameraCaptureMode {
  photo('PHOTO'),
  video('VIDEO');

  final String label;
  const CameraCaptureMode(this.label);
}

enum CameraFlashMode {
...
